--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,12 +1,35 @@
 .button-search {
-    background-color: #344D67;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-top: 20px;
-    border-radius: 20px;
-  }
+  background-color: #344D67;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 20px;
+  border-radius: 20px;
+}
+
+.page-search {
+  height: 100vh;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 20%;
+}
+
+.section-card {
+  border-radius: 20px;
+  border: .5px solid rgb(255, 251, 251);
+  padding: 100px;
+  flex-direction: column;
+  height: 50%;
+  justify-content: center;
+  background-color: #F3ECB0;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
